interface/fast/src/y.output
Nonterminals useless in grammar

   cast_expr


Terminals unused in grammar

   ERROR
   ARROW_LEFT
   ARROW_RIGHT


State 61 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: statements

    2 statements: statement
    3           | statements statement
    4           | error

    5 statement: expr ';'
    6          | if_statement
    7          | while_statement
    8          | switch_statement
    9          | declaration ';'

   10 @1: %empty

   11 statement: scope_statement @1 scope
   12          | function_declaration ';'
   13          | function_implementation
   14          | observer_statement
   15          | update_statement
   16          | block

   17 scope: SCOPE INDENT statements DEDENT
   18      | SCOPE statement

   19 $@2: %empty

   20 scope: SCOPEPRE $@2 INDENT statements DEDENT

   21 $@3: %empty

   22 scope: SCOPEPRE $@3 statement

   23 scope_statement: expr
   24                | declaration

   25 block_start: ':' INDENT

   26 $@4: %empty

   27 block: block_start statements $@4 DEDENT

   28 @5: %empty

   29 block: ':' @5 statement
   30      | ':' ';'

   31 @6: %empty

   32 function_implementation: function_declaration @6 block

   33 @7: %empty

   34 function_implementation: function_declaration @7 '=' expr ';'

   35 function_declaration: identifier any_id function_argumentList
   36                     | identifier any_id function_argumentList any_id
   37                     | identifier GID function_argumentList
   38                     | identifier '&' any_id function_argumentList
   39                     | identifier '&' any_id function_argumentList any_id
   40                     | identifier '&' GID function_argumentList

   41 function_argumentList: '(' ')'
   42                      | '(' function_arguments ')'

   43 function_arguments: function_argument
   44                   | function_arguments ',' function_argument

   45 function_argument: identifier any_id
   46                  | identifier '&' any_id

   47 declaration: identifier declaration_list

   48 $@8: %empty

   49 declaration: KW_LOCAL $@8 declaration_ref

   50 declaration_ref: identifier declaration_list
   51                | identifier '&' declaration_list

   52 declaration_list: declaration_id
   53                 | declaration_list ',' declaration_id

   54 declaration_id: any_id

   55 initializer: init_list_value
   56            | initializer ',' init_list_value

   57 init_list_value: init_value
   58                | init_list_colon

   59 init_value: initializer_braces
   60           | logical_or_expr
   61           | init_value_indent

   62 $@9: %empty

   63 $@10: %empty

   64 initializer_braces: '{' $@9 initializer $@10 '}'
   65                   | '{' '}'

   66 init_value_indent: INDENT initializer DEDENT

   67 init_list_colon: init_colon
   68                | init_list_colon init_colon

   69 $@11: %empty

   70 init_colon: any_id ':' $@11 init_value
   71           | init_key ':' init_value

   72 $@12: %empty

   73 init_key: '@' $@12 initializer_braces
   74         | literal_expr

   75 literal_expr: BOOLEAN
   76             | CHARACTER
   77             | INTEGER
   78             | SIGNEDINTEGER
   79             | FLOATINGPOINT
   80             | STRING
   81             | NUL

   82 $@13: %empty

   83 bracket_expr: '(' $@13 wait_expr ')'

   84 primary_expr: bracket_expr
   85             | literal_expr
   86             | identifier

   87 postfix_expr: primary_expr

   88 $@14: %empty

   89 postfix_expr: postfix_expr $@14 '[' expr ']'
   90             | postfix_expr '(' ')'
   91             | postfix_expr bracket_expr
   92             | postfix_expr '.' any_id
   93             | postfix_expr INC
   94             | postfix_expr DEC

   95 unary_expr: postfix_expr
   96           | unary_operator postfix_expr

   97 unary_operator: '-'
   98               | '~'
   99               | '!'
  100               | LNOT
  101               | INC
  102               | DEC
  103               | '&'

  104 multiplicative_expr: unary_expr

  105 $@15: %empty

  106 $@16: %empty

  107 multiplicative_expr: multiplicative_expr $@15 multiplicative_operator unary_expr $@16

  108 multiplicative_operator: '*'
  109                        | '/'
  110                        | '%'

  111 additive_expr: multiplicative_expr

  112 $@17: %empty

  113 $@18: %empty

  114 additive_expr: additive_expr $@17 additive_operator multiplicative_expr $@18

  115 additive_operator: '+'
  116                  | '-'

  117 shift_expr: additive_expr

  118 $@19: %empty

  119 $@20: %empty

  120 shift_expr: shift_expr $@19 SHIFT_LEFT additive_expr $@20

  121 $@21: %empty

  122 $@22: %empty

  123 shift_expr: shift_expr $@21 SHIFT_RIGHT additive_expr $@22

  124 and_expr: shift_expr

  125 $@23: %empty

  126 $@24: %empty

  127 and_expr: and_expr $@23 '&' shift_expr $@24

  128 xor_expr: and_expr

  129 $@25: %empty

  130 $@26: %empty

  131 xor_expr: xor_expr $@25 '^' and_expr $@26

  132 or_expr: xor_expr

  133 $@27: %empty

  134 $@28: %empty

  135 or_expr: or_expr $@27 '|' xor_expr $@28

  136 boolean_expr: or_expr

  137 $@29: %empty

  138 $@30: %empty

  139 boolean_expr: boolean_expr $@29 boolean_operator or_expr $@30

  140 boolean_operator: '<'
  141                 | '>'
  142                 | LEQ
  143                 | GEQ

  144 equality_expr: boolean_expr

  145 $@31: %empty

  146 $@32: %empty

  147 equality_expr: equality_expr $@31 equality_operator boolean_expr $@32

  148 equality_operator: EQ
  149                  | NEQ

  150 logical_and_expr: equality_expr

  151 $@33: %empty

  152 $@34: %empty

  153 logical_and_expr: logical_and_expr $@33 LAND equality_expr $@34

  154 logical_or_expr: logical_and_expr

  155 $@35: %empty

  156 $@36: %empty

  157 logical_or_expr: logical_or_expr $@35 LOR logical_and_expr $@36

  158 @37: %empty

  159 initializer_expr: @37 initializer_braces
  160                 | logical_or_expr

  161 conditional_expr: initializer_expr
  162                 | initializer_expr '?' conditional_expr ':' conditional_expr

  163 comma_expr: conditional_expr
  164           | comma_expr ',' conditional_expr

  165 assignment_expr: comma_expr

  166 $@38: %empty

  167 $@39: %empty

  168 assignment_expr: assignment_expr $@38 assignment_operator comma_expr $@39

  169 assignment_operator: '='
  170                    | ADD_ASSIGN
  171                    | SUB_ASSIGN
  172                    | MUL_ASSIGN
  173                    | DIV_ASSIGN
  174                    | AND_ASSIGN
  175                    | OR_ASSIGN

  176 wait_expr: assignment_expr
  177          | KW_WAIT assignment_expr
  178          | KW_WAIT assignment_expr KW_FOR logical_or_expr

  179 declaration_expr: wait_expr

  180 $@40: %empty

  181 declaration_expr: wait_expr ':' $@40 initializer
  182                 | wait_expr ':'

  183 $@41: %empty

  184 declaration_expr: declaration ':' $@41 initializer
  185                 | declaration ':'

  186 $@42: %empty

  187 declaration_expr: declaration '=' $@42 comma_expr

  188 expr: declaration_expr

  189 identifier: identifier_id

  190 @43: %empty

  191 identifier: identifier @43 initializer_braces

  192 identifier_id: GID
  193              | any_id

  194 any_id: ID
  195       | '@' KW_SCOPE
  196       | '@' KW_UPDATE
  197       | '@' KW_DECLARE
  198       | '@' KW_DEFINE
  199       | '@' KW_DESTRUCT
  200       | '@' KW_WAIT
  201       | '@' KW_ON
  202       | '@' KW_SELF
  203       | '@' KW_SYNCHRONIZED
  204       | '@' KW_IF
  205       | '@' KW_ELSE
  206       | '@' KW_WHILE
  207       | '@' KW_SWITCH
  208       | '@' KW_CASE
  209       | '@' KW_DEFAULT
  210       | '@' KW_BREAK
  211       | '@' KW_FOR
  212       | '@' KW_TRY
  213       | '@' KW_CATCH
  214       | '@' KW_IMPORT
  215       | '@' KW_LOCAL
  216       | '@' KW_VIRTUAL
  217       | '@' LAND
  218       | '@' LOR
  219       | '@' LNOT

  220 if_statement: if_start block
  221             | if_start block KW_ELSE block
  222             | if_start block KW_ELSE if_statement

  223 if_start: KW_IF wait_expr

  224 while_statement: while_until block
  225                | while_until ';'

  226 while_until: KW_WHILE wait_expr

  227 switch_statement: KW_SWITCH wait_expr ':' case_list INDENT switch_statements DEDENT
  228                 | KW_SWITCH wait_expr ':' switch_statements DEDENT

  229 switch_statements: statement
  230                  | case_statement
  231                  | switch_statements statement
  232                  | switch_statements case_statement

  233 case_statement: DEDENT case_list INDENT

  234 case_list: case_label
  235          | case_list case_label

  236 case_label: KW_CASE wait_expr ':'
  237           | KW_DEFAULT ':'

  238 observer_statement: observer_declaration block
  239                   | observer_declaration ';'

  240 observer_declaration: observer_dispatch event_mask assignment_expr
  241                     | observer_dispatch assignment_expr

  242 observer_dispatch: KW_ON

  243 event_mask: event_flag
  244           | event_mask '|' event_flag

  245 event_flag: event_baseflag
  246           | event_childflag
  247           | event_baseflag event_childflag

  248 event_baseflag: KW_UPDATE
  249               | KW_DECLARE
  250               | KW_DEFINE
  251               | KW_DESTRUCT

  252 event_childflag: KW_SELF
  253                | KW_SCOPE
  254                | KW_SYNCHRONIZED

  255 update_statement: KW_UPDATE wait_expr ';'
  256                 | KW_UPDATE wait_expr block


Terminals, with rules where they appear

$end (0) 0
'!' (33) 99
'%' (37) 110
'&' (38) 38 39 40 46 51 103 127
'(' (40) 41 42 83 90
')' (41) 41 42 83 90
'*' (42) 108
'+' (43) 115
',' (44) 44 53 56 164
'-' (45) 97 116
'.' (46) 92
'/' (47) 109
':' (58) 25 29 30 70 71 162 181 182 184 185 227 228 236 237
';' (59) 5 9 12 30 34 225 239 255
'<' (60) 140
'=' (61) 34 169 187
'>' (62) 141
'?' (63) 162
'@' (64) 73 195 196 197 198 199 200 201 202 203 204 205 206 207 208
    209 210 211 212 213 214 215 216 217 218 219
'[' (91) 89
']' (93) 89
'^' (94) 131
'{' (123) 64 65
'|' (124) 135 244
'}' (125) 64 65
'~' (126) 98
error (256) 4
ERROR (258)
BOOLEAN (259) 75
CHARACTER (260) 76
INTEGER (261) 77
SIGNEDINTEGER (262) 78
FLOATINGPOINT (263) 79
STRING (264) 80
NUL (265) 81
ID (266) 194
GID (267) 37 40 192
MUL_ASSIGN (268) 172
DIV_ASSIGN (269) 173
ADD_ASSIGN (270) 170
SUB_ASSIGN (271) 171
OR_ASSIGN (272) 175
AND_ASSIGN (273) 174
LOR (274) 157 218
LAND (275) 153 217
LNOT (276) 100 219
LEQ (277) 142
GEQ (278) 143
EQ (279) 148
NEQ (280) 149
INC (281) 93 101
DEC (282) 94 102
SCOPE (283) 17 18
SCOPEPRE (284) 20 22
SHIFT_LEFT (285) 120
SHIFT_RIGHT (286) 123
ARROW_LEFT (287)
ARROW_RIGHT (288)
INDENT (289) 17 20 25 66 227 233
DEDENT (290) 17 20 27 66 227 228 233
KW_UPDATE (291) 196 248 255 256
KW_DECLARE (292) 197 249
KW_DEFINE (293) 198 250
KW_DESTRUCT (294) 199 251
KW_ON (295) 201 242
KW_SCOPE (296) 195 253
KW_SELF (297) 202 252
KW_SYNCHRONIZED (298) 203 254
KW_IF (299) 204 223
KW_ELSE (300) 205 221 222
KW_WHILE (301) 206 226
KW_SWITCH (302) 207 227 228
KW_CASE (303) 208 236
KW_DEFAULT (304) 209 237
KW_BREAK (305) 210
KW_FOR (306) 178 211
KW_WAIT (307) 177 178 200
KW_TRY (308) 212
KW_CATCH (309) 213
KW_IMPORT (310) 214
KW_LOCAL (311) 49 215
KW_VIRTUAL (312) 216


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
code (84)
    on left: 1, on right: 0
statements (85)
    on left: 2 3 4, on right: 1 3 17 20 27
statement (86)
    on left: 5 6 7 8 9 11 12 13 14 15 16, on right: 2 3 18 22 29 229
    231
@1 (87)
    on left: 10, on right: 11
scope (88)
    on left: 17 18 20 22, on right: 11
$@2 (89)
    on left: 19, on right: 20
$@3 (90)
    on left: 21, on right: 22
scope_statement (91)
    on left: 23 24, on right: 11
block_start (92)
    on left: 25, on right: 27
block (93)
    on left: 27 29 30, on right: 16 32 220 221 222 224 238 256
$@4 (94)
    on left: 26, on right: 27
@5 (95)
    on left: 28, on right: 29
function_implementation (96)
    on left: 32 34, on right: 13
@6 (97)
    on left: 31, on right: 32
@7 (98)
    on left: 33, on right: 34
function_declaration (99)
    on left: 35 36 37 38 39 40, on right: 12 32 34
function_argumentList (100)
    on left: 41 42, on right: 35 36 37 38 39 40
function_arguments (101)
    on left: 43 44, on right: 42 44
function_argument (102)
    on left: 45 46, on right: 43 44
declaration (103)
    on left: 47 49, on right: 9 24 184 185 187
$@8 (104)
    on left: 48, on right: 49
declaration_ref (105)
    on left: 50 51, on right: 49
declaration_list (106)
    on left: 52 53, on right: 47 50 51 53
declaration_id (107)
    on left: 54, on right: 52 53
initializer (108)
    on left: 55 56, on right: 56 64 66 181 184
init_list_value (109)
    on left: 57 58, on right: 55 56
init_value (110)
    on left: 59 60 61, on right: 57 70 71
initializer_braces (111)
    on left: 64 65, on right: 59 73 159 191
$@9 (112)
    on left: 62, on right: 64
$@10 (113)
    on left: 63, on right: 64
init_value_indent (114)
    on left: 66, on right: 61
init_list_colon (115)
    on left: 67 68, on right: 58 68
init_colon (116)
    on left: 70 71, on right: 67 68
$@11 (117)
    on left: 69, on right: 70
init_key (118)
    on left: 73 74, on right: 71
$@12 (119)
    on left: 72, on right: 73
literal_expr (120)
    on left: 75 76 77 78 79 80 81, on right: 74 85
bracket_expr (121)
    on left: 83, on right: 84 91
$@13 (122)
    on left: 82, on right: 83
primary_expr (123)
    on left: 84 85 86, on right: 87
postfix_expr (124)
    on left: 87 89 90 91 92 93 94, on right: 89 90 91 92 93 94 95 96
$@14 (125)
    on left: 88, on right: 89
unary_expr (126)
    on left: 95 96, on right: 104 107
unary_operator (127)
    on left: 97 98 99 100 101 102 103, on right: 96
multiplicative_expr (128)
    on left: 104 107, on right: 107 111 114
$@15 (129)
    on left: 105, on right: 107
$@16 (130)
    on left: 106, on right: 107
multiplicative_operator (131)
    on left: 108 109 110, on right: 107
additive_expr (132)
    on left: 111 114, on right: 114 117 120 123
$@17 (133)
    on left: 112, on right: 114
$@18 (134)
    on left: 113, on right: 114
additive_operator (135)
    on left: 115 116, on right: 114
shift_expr (136)
    on left: 117 120 123, on right: 120 123 124 127
$@19 (137)
    on left: 118, on right: 120
$@20 (138)
    on left: 119, on right: 120
$@21 (139)
    on left: 121, on right: 123
$@22 (140)
    on left: 122, on right: 123
and_expr (141)
    on left: 124 127, on right: 127 128 131
$@23 (142)
    on left: 125, on right: 127
$@24 (143)
    on left: 126, on right: 127
xor_expr (144)
    on left: 128 131, on right: 131 132 135
$@25 (145)
    on left: 129, on right: 131
$@26 (146)
    on left: 130, on right: 131
or_expr (147)
    on left: 132 135, on right: 135 136 139
$@27 (148)
    on left: 133, on right: 135
$@28 (149)
    on left: 134, on right: 135
boolean_expr (150)
    on left: 136 139, on right: 139 144 147
$@29 (151)
    on left: 137, on right: 139
$@30 (152)
    on left: 138, on right: 139
boolean_operator (153)
    on left: 140 141 142 143, on right: 139
equality_expr (154)
    on left: 144 147, on right: 147 150 153
$@31 (155)
    on left: 145, on right: 147
$@32 (156)
    on left: 146, on right: 147
equality_operator (157)
    on left: 148 149, on right: 147
logical_and_expr (158)
    on left: 150 153, on right: 153 154 157
$@33 (159)
    on left: 151, on right: 153
$@34 (160)
    on left: 152, on right: 153
logical_or_expr (161)
    on left: 154 157, on right: 60 157 160 178
$@35 (162)
    on left: 155, on right: 157
$@36 (163)
    on left: 156, on right: 157
initializer_expr (164)
    on left: 159 160, on right: 161 162
@37 (165)
    on left: 158, on right: 159
conditional_expr (166)
    on left: 161 162, on right: 162 163 164
comma_expr (167)
    on left: 163 164, on right: 164 165 168 187
assignment_expr (168)
    on left: 165 168, on right: 168 176 177 178 240 241
$@38 (169)
    on left: 166, on right: 168
$@39 (170)
    on left: 167, on right: 168
assignment_operator (171)
    on left: 169 170 171 172 173 174 175, on right: 168
wait_expr (172)
    on left: 176 177 178, on right: 83 179 181 182 223 226 227 228
    236 255 256
declaration_expr (173)
    on left: 179 181 182 184 185 187, on right: 188
$@40 (174)
    on left: 180, on right: 181
$@41 (175)
    on left: 183, on right: 184
$@42 (176)
    on left: 186, on right: 187
expr (177)
    on left: 188, on right: 5 23 34 89
identifier (178)
    on left: 189 191, on right: 35 36 37 38 39 40 45 46 47 50 51 86
    191
@43 (179)
    on left: 190, on right: 191
identifier_id (180)
    on left: 192 193, on right: 189
any_id (181)
    on left: 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 219, on right: 35 36
    38 39 45 46 54 70 92 193
if_statement (182)
    on left: 220 221 222, on right: 6 222
if_start (183)
    on left: 223, on right: 220 221 222
while_statement (184)
    on left: 224 225, on right: 7
while_until (185)
    on left: 226, on right: 224 225
switch_statement (186)
    on left: 227 228, on right: 8
switch_statements (187)
    on left: 229 230 231 232, on right: 227 228 231 232
case_statement (188)
    on left: 233, on right: 230 232
case_list (189)
    on left: 234 235, on right: 227 233 235
case_label (190)
    on left: 236 237, on right: 234 235
observer_statement (191)
    on left: 238 239, on right: 14
observer_declaration (192)
    on left: 240 241, on right: 238 239
observer_dispatch (193)
    on left: 242, on right: 240 241
event_mask (194)
    on left: 243 244, on right: 240 244
event_flag (195)
    on left: 245 246 247, on right: 243 244
event_baseflag (196)
    on left: 248 249 250 251, on right: 245 247
event_childflag (197)
    on left: 252 253 254, on right: 246 247
update_statement (198)
    on left: 255 256, on right: 15


State 0

    0 $accept: . code $end

    error          shift, and go to state 1
    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    KW_UPDATE      shift, and go to state 14
    KW_ON          shift, and go to state 15
    KW_IF          shift, and go to state 16
    KW_WHILE       shift, and go to state 17
    KW_SWITCH      shift, and go to state 18
    KW_WAIT        shift, and go to state 19
    KW_LOCAL       shift, and go to state 20
    ':'            shift, and go to state 21
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    '{'  reduce using rule 158 (@37)

    code                     go to state 28
    statements               go to state 29
    statement                go to state 30
    scope_statement          go to state 31
    block_start              go to state 32
    block                    go to state 33
    function_implementation  go to state 34
    function_declaration     go to state 35
    declaration              go to state 36
    literal_expr             go to state 37
    bracket_expr             go to state 38
    primary_expr             go to state 39
    postfix_expr             go to state 40
    unary_expr               go to state 41
    unary_operator           go to state 42
    multiplicative_expr      go to state 43
    additive_expr            go to state 44
    shift_expr               go to state 45
    and_expr                 go to state 46
    xor_expr                 go to state 47
    or_expr                  go to state 48
    boolean_expr             go to state 49
    equality_expr            go to state 50
    logical_and_expr         go to state 51
    logical_or_expr          go to state 52
    initializer_expr         go to state 53
    @37                      go to state 54
    conditional_expr         go to state 55
    comma_expr               go to state 56
    assignment_expr          go to state 57
    wait_expr                go to state 58
    declaration_expr         go to state 59
    expr                     go to state 60
    identifier               go to state 61
    identifier_id            go to state 62
    any_id                   go to state 63
    if_statement             go to state 64
    if_start                 go to state 65
    while_statement          go to state 66
    while_until              go to state 67
    switch_statement         go to state 68
    observer_statement       go to state 69
    observer_declaration     go to state 70
    observer_dispatch        go to state 71
    update_statement         go to state 72


State 1

    4 statements: error .

    $default  reduce using rule 4 (statements)


State 2

   75 literal_expr: BOOLEAN .

    $default  reduce using rule 75 (literal_expr)


State 3

   76 literal_expr: CHARACTER .

    $default  reduce using rule 76 (literal_expr)


State 4

   77 literal_expr: INTEGER .

    $default  reduce using rule 77 (literal_expr)


State 5

   78 literal_expr: SIGNEDINTEGER .

    $default  reduce using rule 78 (literal_expr)


State 6

   79 literal_expr: FLOATINGPOINT .

    $default  reduce using rule 79 (literal_expr)


State 7

   80 literal_expr: STRING .

    $default  reduce using rule 80 (literal_expr)


State 8

   81 literal_expr: NUL .

    $default  reduce using rule 81 (literal_expr)


State 9

  194 any_id: ID .

    $default  reduce using rule 194 (any_id)


State 10

  192 identifier_id: GID .

    $default  reduce using rule 192 (identifier_id)


State 11

  100 unary_operator: LNOT .

    $default  reduce using rule 100 (unary_operator)


State 12

  101 unary_operator: INC .

    $default  reduce using rule 101 (unary_operator)


State 13

  102 unary_operator: DEC .

    $default  reduce using rule 102 (unary_operator)


State 14

  255 update_statement: KW_UPDATE . wait_expr ';'
  256                 | KW_UPDATE . wait_expr block

    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    KW_WAIT        shift, and go to state 19
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    $default  reduce using rule 158 (@37)

    literal_expr         go to state 37
    bracket_expr         go to state 38
    primary_expr         go to state 39
    postfix_expr         go to state 40
    unary_expr           go to state 41
    unary_operator       go to state 42
    multiplicative_expr  go to state 43
    additive_expr        go to state 44
    shift_expr           go to state 45
    and_expr             go to state 46
    xor_expr             go to state 47
    or_expr              go to state 48
    boolean_expr         go to state 49
    equality_expr        go to state 50
    logical_and_expr     go to state 51
    logical_or_expr      go to state 52
    initializer_expr     go to state 53
    @37                  go to state 54
    conditional_expr     go to state 55
    comma_expr           go to state 56
    assignment_expr      go to state 57
    wait_expr            go to state 73
    identifier           go to state 74
    identifier_id        go to state 62
    any_id               go to state 63


State 15

  242 observer_dispatch: KW_ON .

    $default  reduce using rule 242 (observer_dispatch)


State 16

  223 if_start: KW_IF . wait_expr

    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    KW_WAIT        shift, and go to state 19
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    $default  reduce using rule 158 (@37)

    literal_expr         go to state 37
    bracket_expr         go to state 38
    primary_expr         go to state 39
    postfix_expr         go to state 40
    unary_expr           go to state 41
    unary_operator       go to state 42
    multiplicative_expr  go to state 43
    additive_expr        go to state 44
    shift_expr           go to state 45
    and_expr             go to state 46
    xor_expr             go to state 47
    or_expr              go to state 48
    boolean_expr         go to state 49
    equality_expr        go to state 50
    logical_and_expr     go to state 51
    logical_or_expr      go to state 52
    initializer_expr     go to state 53
    @37                  go to state 54
    conditional_expr     go to state 55
    comma_expr           go to state 56
    assignment_expr      go to state 57
    wait_expr            go to state 75
    identifier           go to state 74
    identifier_id        go to state 62
    any_id               go to state 63


State 17

  226 while_until: KW_WHILE . wait_expr

    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    KW_WAIT        shift, and go to state 19
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    $default  reduce using rule 158 (@37)

    literal_expr         go to state 37
    bracket_expr         go to state 38
    primary_expr         go to state 39
    postfix_expr         go to state 40
    unary_expr           go to state 41
    unary_operator       go to state 42
    multiplicative_expr  go to state 43
    additive_expr        go to state 44
    shift_expr           go to state 45
    and_expr             go to state 46
    xor_expr             go to state 47
    or_expr              go to state 48
    boolean_expr         go to state 49
    equality_expr        go to state 50
    logical_and_expr     go to state 51
    logical_or_expr      go to state 52
    initializer_expr     go to state 53
    @37                  go to state 54
    conditional_expr     go to state 55
    comma_expr           go to state 56
    assignment_expr      go to state 57
    wait_expr            go to state 76
    identifier           go to state 74
    identifier_id        go to state 62
    any_id               go to state 63


State 18

  227 switch_statement: KW_SWITCH . wait_expr ':' case_list INDENT switch_statements DEDENT
  228                 | KW_SWITCH . wait_expr ':' switch_statements DEDENT

    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    KW_WAIT        shift, and go to state 19
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    $default  reduce using rule 158 (@37)

    literal_expr         go to state 37
    bracket_expr         go to state 38
    primary_expr         go to state 39
    postfix_expr         go to state 40
    unary_expr           go to state 41
    unary_operator       go to state 42
    multiplicative_expr  go to state 43
    additive_expr        go to state 44
    shift_expr           go to state 45
    and_expr             go to state 46
    xor_expr             go to state 47
    or_expr              go to state 48
    boolean_expr         go to state 49
    equality_expr        go to state 50
    logical_and_expr     go to state 51
    logical_or_expr      go to state 52
    initializer_expr     go to state 53
    @37                  go to state 54
    conditional_expr     go to state 55
    comma_expr           go to state 56
    assignment_expr      go to state 57
    wait_expr            go to state 77
    identifier           go to state 74
    identifier_id        go to state 62
    any_id               go to state 63


State 19

  177 wait_expr: KW_WAIT . assignment_expr
  178          | KW_WAIT . assignment_expr KW_FOR logical_or_expr

    BOOLEAN        shift, and go to state 2
    CHARACTER      shift, and go to state 3
    INTEGER        shift, and go to state 4
    SIGNEDINTEGER  shift, and go to state 5
    FLOATINGPOINT  shift, and go to state 6
    STRING         shift, and go to state 7
    NUL            shift, and go to state 8
    ID             shift, and go to state 9
    GID            shift, and go to state 10
    LNOT           shift, and go to state 11
    INC            shift, and go to state 12
    DEC            shift, and go to state 13
    '&'            shift, and go to state 22
    '('            shift, and go to state 23
    '@'            shift, and go to state 24
    '-'            shift, and go to state 25
    '~'            shift, and go to state 26
    '!'            shift, and go to state 27

    $default  reduce using rule 158 (@37)

    literal_expr         go to state 37
    bracket_expr         go to state 38
    primary_expr         go to state 39
    postfix_expr         go to state 40
    unary_expr           go to state 41
    unary_operator       go to state 42
    multiplicative_expr  go to state 43
    additive_expr        go to state 44
    shift_expr           go to state 45
    and_expr             go to state 46
    xor_expr             go to state 47
    or_expr              go to state 48
    boolean_expr         go to state 49
    equality_expr        go to state 50
    logical_and_expr     go to state 51
    logical_or_expr      go to state 52
    initializer_expr     go to state 53
    @37                  go to state 54
    conditional_expr     go to state 55
    comma_expr           go to state 56
    assignment_expr      go to state 78
    identifier           go to state 74
    identifier_id        go to state 62
    any_id               go to state 63


State 20

   49 declaration: KW_LOCAL . $@8 declaration_ref

    $default  reduce using rule 48 ($@8)

    $@8  go to state 79


State 21

   25 block_start: ':' . INDENT
   29 block: ':' . @5 statement
   30      | ':' . ';'

    INDENT  shift, and go to state 80
    ';'     shift, and go to state 81

    $default  reduce using rule 28 (@5)

    @5  go to state 82


State 22

  103 unary_operator: '&' .

    $default  reduce using rule 103 (unary_operator)


State 23

   83 bracket_expr: '(' . $@13 wait_expr ')'

    $default  reduce using rule 82 ($@13)

    $@13  go to state 83


State 24

  195 any_id: '@' . KW_SCOPE
  196       | '@' . KW_UPDATE
  197       | '@' . KW_DECLARE
  198       | '@' . KW_DEFINE
  199       | '@' . KW_DESTRUCT
  200       | '@' . KW_WAIT
  201       | '@' . KW_ON
  202       | '@' . KW_SELF
  203       | '@' . KW_SYNCHRONIZED
  204       | '@' . KW_IF
  205       | '@' . KW_ELSE
  206       | '@' . KW_WHILE
  207       | '@' . KW_SWITCH
  208       | '@' . KW_CASE
  209       | '@' . KW_DEFAULT
  210       | '@' . KW_BREAK
  211       | '@' . KW_FOR
  212       | '@' . KW_TRY
  213       | '@' . KW_CATCH
  214       | '@' . KW_IMPORT
  215       | '@' . KW_LOCAL
  216       | '@' . KW_VIRTUAL
  217       | '@' . LAND
  218       | '@' . LOR
  219       | '@' . LNOT

    LOR              shift, and go to state 84
    LAND             shift, and go to state 85
    LNOT             shift, and go to state 86
    KW_UPDATE        shift, and go to state 87
    KW_DECLARE       shift, and go to state 88
    KW_DEFINE        shift, and go to state 89
    KW_DESTRUCT      shift, and go to state 90
    KW_ON            shift, and go to state 91
    KW_SCOPE         shift, and go to state 92
    KW_SELF          shift, and go to state 93
    KW_SYNCHRONIZED  shift, and go to state 94
    KW_IF            shift, and go to state 95
    KW_ELSE          shift, and go to state 96
    KW_WHILE         shift, and go to state 97
    KW_SWITCH        shift, and go to state 98
    KW_CASE          shift, and go to state 99
    KW_DEFAULT       shift, and go to state 100
    KW_BREAK         shift, and go to state 101
    KW_FOR           shift, and go to state 102
    KW_WAIT          shift, and go to state 103
    KW_TRY           shift, and go to state 104
    KW_CATCH         shift, and go to state 105
    KW_IMPORT        shift, and go to state 106
    KW_LOCAL         shift, and go to state 107
    KW_VIRTUAL       shift, and go to state 108


State 25

   97 unary_operator: '-' .

    $default  reduce using rule 97 (unary_operator)


State 26

   98 unary_operator: '~' .

    $default  reduce using rule 98 (unary_operator)


State 27

   99 unary_operator: '!' .

    $default  reduce using rule 99 (unary_operator)


State 28

    0 $accept: code . $end

    $end  shift, and go to state 109


State 29

    1 code: statements .
    3 statements: statements . statement
